--- a/client/assets/custom/css/style.css
+++ b/client/assets/custom/css/style.css
@@ -1,3 +1,12 @@
 body {
   padding-top: 50px;
 }
+
+.transaction {
+	background-color: purple;
+	color: white;
+	border-radius: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	text-align: center;
+}
